--- a/EventApp/app/src/main/res/layout/fragment_organizer_customize_profile.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_customize_profile.xml
@@ -6,6 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".organizer.OrganizerAccount">
     <!-- TODO: ImageView will be added here -->
+    <ImageView
+        android:id="@+id/organizerProfilePic"
+        android:layout_width="120dp"
+        android:layout_height="86dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="50dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextTextEmailAddress"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:src="@tools:sample/avatars" />
 
     <TextView
         android:id="@+id/UsernameLabel"
@@ -23,7 +35,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/edittext_frame"
-        android:hint="@string/hint_email"
         android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@+id/UsernameLabel"
         app:layout_constraintStart_toStartOf="parent"
@@ -44,7 +55,6 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/edittext_frame"
-        android:hint="@string/hint_phone"
         android:inputType="phone"
         app:layout_constraintTop_toBottomOf="@+id/Contact"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,7 +77,6 @@
         android:background="@drawable/edittext_frame"
         android:ems="10"
         android:gravity="start|top"
-        android:hint="@string/hint_homepage_description"
         android:inputType="textMultiLine"
         app:layout_constraintTop_toBottomOf="@+id/HomepageDescription"
         app:layout_constraintStart_toStartOf="parent"
