--- a/EventApp/app/src/main/res/layout/activity_admin_browse_profile.xml
+++ b/EventApp/app/src/main/res/layout/activity_admin_browse_profile.xml
@@ -14,8 +14,8 @@
         android:background="#CAC9C9"
         android:visibility="visible"
         android:focusable="true"
-        android:focusableInTouchMode="true"
-        app:iconifiedByDefault="false"
+        android:clickable="true"
+        android:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
