--- a/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_event.xml
@@ -17,7 +17,7 @@
     android:visibility="visible"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    app:iconifiedByDefault="false"
+    android:iconifiedByDefault="false"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.49"
     app:layout_constraintStart_toStartOf="parent"
