--- a/EventApp/app/src/main/res/layout/activity_admin_browse_image.xml
+++ b/EventApp/app/src/main/res/layout/activity_admin_browse_image.xml
@@ -7,35 +7,17 @@
     tools:context=".admin.AdminBrowseImage"
     >
 
-    <SearchView
-        android:id="@+id/imageSearcher"
-        android:layout_width="340dp"
-        android:layout_height="32dp"
-        android:layout_marginTop="52dp"
-        android:background="#CAC9C9"
-        android:visibility="visible"
-        android:focusable="true"
-        android:clickable="true"
-        android:iconifiedByDefault="false"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <GridView
         android:id="@+id/imageGridView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="112dp"
-        android:layout_marginBottom="30dp"
-        android:columnWidth="100dp"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
         android:numColumns="2"
-        android:stretchMode="columnWidth"
+        android:columnWidth="100dp"
         android:verticalSpacing="10dp"
-        app:layout_constraintTop_toBottomOf="@id/imageSearcher"
-        tools:layout_editor_absoluteX="0dp" />
+        android:horizontalSpacing="10dp"
+        android:gravity="center"
+        android:layout_marginBottom="30sp"
+        android:stretchMode="columnWidth" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
