--- a/EventApp/app/src/main/res/layout/activity_admin_browse_profile.xml
+++ b/EventApp/app/src/main/res/layout/activity_admin_browse_profile.xml
@@ -29,6 +29,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profileSearcher" />
+        app:layout_constraintTop_toBottomOf="@id/profileSearcher" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
