--- a/EventApp/app/src/main/res/layout/content_profile_display.xml
+++ b/EventApp/app/src/main/res/layout/content_profile_display.xml
@@ -29,13 +29,12 @@
 
     <Button
         android:id="@+id/btnViewProfile"
-
         android:layout_width="70dp"
         android:layout_height="48dp"
         android:textColor="@color/white"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="44dp"
-        android:text="@string/View"
+        android:text="View"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
