--- a/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event.xml
@@ -4,36 +4,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingHorizontal="16dp"
-    tools:context=".attendee.AttendeeHome">
+    tools:context=".attendee.AttendeeEvent">
 
-    <!-- TODO: Update blank fragment layout -->
-
-    <TextView
-        android:id="@+id/elevateEvent"
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:gravity="center"
-        android:text="@string/elevate_your_events"
-        android:textColor="@android:color/black"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <SearchView
+        android:id="@+id/organizer_eventSearcher"
+        android:layout_width="340dp"
+        android:layout_height="32dp"
+        android:layout_marginTop="52dp"
+        android:background="#CAC9C9"
+        android:visibility="visible"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        app:iconifiedByDefault="false"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.49"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.127" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
-        android:id="@+id/homepageListView"
-        android:layout_width="327dp"
-        android:layout_height="570dp"
-        android:layout_marginTop="32dp"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="10.0sp"
+        android:id="@+id/organizer_eventListView"
+        android:layout_width="match_parent"
+        android:layout_height="564dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/elevateEvent" />
+        app:layout_constraintTop_toBottomOf="@+id/organizer_eventSearcher" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
