--- a/EventApp/app/src/main/res/layout/fragment_create_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_create_event.xml
@@ -66,7 +66,7 @@
     <EditText
         android:id="@+id/EditEventDescription"
         android:layout_width="0dp"
-        android:layout_height="135dp"
+        android:layout_height="100dp"
         android:layout_marginHorizontal="16dp"
         android:background="@drawable/edittext_frame"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,24 +74,11 @@
         app:layout_constraintTop_toBottomOf="@+id/CreateEventDescription" />
 
     <Button
-        android:id="@+id/buttonDeleteImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
-        android:background="@drawable/rounded_button_background"
-        android:text="@string/AddImage"
-        android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditEventDescription" />
-
-    <Button
         android:id="@+id/buttonArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="93dp"
         android:background="?android:attr/selectableItemBackground"
         android:drawableStart="@drawable/baseline_arrow_back_24"
         android:paddingStart="8dp"
@@ -99,19 +86,19 @@
         android:text="@string/Previous"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteImage" />
+        app:layout_constraintTop_toBottomOf="@+id/EventImageView" />
 
     <Button
         android:id="@+id/buttonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="91dp"
         android:layout_marginEnd="30dp"
+        android:background="?android:attr/selectableItemBackground"
         android:text="@string/Confirm"
         android:textColor="@color/black"
-        android:background="?android:attr/selectableItemBackground"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteImage" />
+        app:layout_constraintTop_toBottomOf="@+id/EventImageView" />
 
     <TextView
         android:id="@+id/CreateEventTitle"
@@ -136,5 +123,15 @@
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CreateEventTitle" />
+
+    <ImageView
+        android:id="@+id/EventImageView"
+        android:layout_width="0dp"
+        android:layout_height="118dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:onClick="pickImage"
+        app:layout_constraintTop_toBottomOf="@+id/EditEventDescription"
+        android:src="@drawable/ic_upload" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
