--- a/EventApp/app/src/main/res/layout/fragment_organizer_event_info.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event_info.xml
@@ -10,7 +10,7 @@
     <!-- TODO: Update blank fragment layout -->
 
     <TextView
-        android:id="@+id/organizer_eventTitleDescrip"
+        android:id="@+id/eventName_info"
         android:layout_width="286dp"
         android:layout_height="61dp"
         android:layout_marginTop="80dp"
@@ -31,11 +31,11 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/organizer_eventFullDescription"
+        app:layout_constraintTop_toBottomOf="@+id/eventDescription_info"
         tools:src="@tools:sample/avatars" />
 
     <TextView
-        android:id="@+id/organizer_eventFullDescription"
+        android:id="@+id/eventDescription_info"
         android:layout_width="362dp"
         android:layout_height="56dp"
         android:layout_marginTop="24dp"
@@ -43,6 +43,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.516"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/organizer_eventTitleDescrip" />
+        app:layout_constraintTop_toBottomOf="@+id/eventName_info" />
+
+    <Button
+        android:id="@+id/button_editEvent_info"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="@string/edit_event"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/rounded_button_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/organizer_biggerEventImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
