--- a/EventApp/app/src/main/res/layout/customize_attendee_profile.xml
+++ b/EventApp/app/src/main/res/layout/customize_attendee_profile.xml
@@ -71,7 +71,7 @@
         app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
+        <Button
         android:id="@+id/AttendeeAccountSave"
         android:layout_width="158dp"
         android:layout_height="45dp"
@@ -92,11 +92,12 @@
         android:layout_marginTop="51dp"
         android:layout_marginEnd="24dp"
         android:background="@drawable/rounded_button_background"
-        android:onClick="onCustomizeProfileDeleteImageClicked"
         android:text="@string/DeleteImage"
         android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+    <!--        android:onClick="onCustomizeProfileDeleteImageClicked"-->
+
 
     <Button
         android:id="@+id/CustomizeImage"
@@ -105,11 +106,11 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="51dp"
         android:background="@drawable/rounded_button_background"
-        android:onClick="onCustomizeProfileCustomizeImageClicked"
         android:text="@string/CustomizeImage"
         android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+    <!--        android:onClick="onCustomizeProfileCustomizeImageClicked"-->
 
     <ImageView
         android:id="@+id/attendeeProfilePic"
