--- a/EventApp/app/src/main/res/layout/fragment_attendee_notification.xml
+++ b/EventApp/app/src/main/res/layout/fragment_attendee_notification.xml
@@ -4,11 +4,33 @@
     android:layout_height="match_parent">
 
     <!-- ListView for displaying notifications -->
+
     <ListView
         android:id="@+id/AttendeeNotificationListView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="-2dp"
+        android:layout_marginBottom="0dp"
         android:visibility="visible" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="0dp"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="8dp" />
 
 
 </RelativeLayout>
