--- a/EventApp/app/src/main/res/layout/fragment_organizer_create_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_create_event.xml
@@ -65,12 +65,10 @@
 
     <EditText
         android:id="@+id/EditEventDescription"
-        android:layout_width="376dp"
-        android:layout_height="76dp"
+        android:layout_width="0dp"
+        android:layout_height="100dp"
         android:layout_marginHorizontal="16dp"
-        android:layout_marginBottom="24dp"
         android:background="@drawable/edittext_frame"
-        app:layout_constraintBottom_toTopOf="@+id/LimitAttendeesView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CreateEventDescription" />
@@ -79,8 +77,8 @@
         android:id="@+id/buttonArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="70dp"
         android:background="?android:attr/selectableItemBackground"
         android:drawableStart="@drawable/baseline_arrow_back_24"
         android:paddingStart="8dp"
@@ -94,8 +92,8 @@
         android:id="@+id/buttonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="30dp"
         android:background="?android:attr/selectableItemBackground"
         android:text="@string/Confirm"
         android:textColor="@color/black"
@@ -106,8 +104,8 @@
         android:id="@+id/CreateEventTitle"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
         android:text="@string/create_event_text"
         android:textColor="@color/black"
         android:textSize="34sp"
@@ -126,6 +124,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/CreateEventTitle" />
 
+    <ImageView
+        android:id="@+id/EventImageView"
+        android:layout_width="0dp"
+        android:layout_height="118dp"
+        android:layout_marginTop="52dp"
+        android:onClick="pickImage"
+        android:src="@drawable/ic_upload"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/EditEventDescription" />
 
     <EditText
         android:id="@+id/LimitAttendeesView"
@@ -140,18 +149,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EditEventDescription" />
-
-    <ImageView
-        android:id="@+id/EventImageView"
-        android:layout_width="0dp"
-        android:layout_height="118dp"
-        android:layout_marginTop="8dp"
-        android:onClick="pickImage"
-        android:src="@drawable/ic_upload"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/LimitAttendeesView" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
