--- a/EventApp/app/src/main/res/layout/fragment_organizer_event_info.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_event_info.xml
@@ -55,8 +55,6 @@
         android:background="@drawable/rounded_button_background"
         android:text="@string/edit_event"
         android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/organizer_biggerEventImage" />
 
@@ -71,5 +69,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/eventName_info" />
+
+    <Button
+        android:id="@+id/btn_reuse_qrcode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/rounded_button_background"
+        android:text="REUSE QR COde"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/organizer_biggerEventImage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
