--- a/EventApp/app/src/main/res/layout/fragment_organizer_create_event.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_create_event.xml
@@ -77,8 +77,8 @@
         android:id="@+id/buttonArrow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="644dp"
         android:background="?android:attr/selectableItemBackground"
         android:drawableStart="@drawable/baseline_arrow_back_24"
         android:paddingStart="8dp"
@@ -86,19 +86,19 @@
         android:text="@string/Previous"
         android:textColor="@color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EventImageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginTop="644dp"
+        android:layout_marginEnd="36dp"
         android:background="?android:attr/selectableItemBackground"
         android:text="@string/Confirm"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EventImageView" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/CreateEventTitle"
@@ -116,8 +116,8 @@
         android:id="@+id/CreateEventTitleText"
         android:layout_width="375dp"
         android:layout_height="44dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
         android:text="@string/create_event_title_text"
         android:textColor="@color/gray"
         android:textSize="16sp"
@@ -126,13 +126,13 @@
 
     <ImageView
         android:id="@+id/EventImageView"
-        android:layout_width="0dp"
-        android:layout_height="118dp"
-        android:layout_marginTop="52dp"
+        android:layout_width="390dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="76dp"
         android:onClick="pickImage"
         android:src="@drawable/ic_upload"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/EditEventDescription" />
 
