--- a/EventApp/app/src/main/res/layout/fragment_qr_code_scan.xml
+++ b/EventApp/app/src/main/res/layout/fragment_qr_code_scan.xml
@@ -32,4 +32,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scanTitle" />
 
+    <Button
+        android:id="@+id/testButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="98dp"
+        android:text="Button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_scan" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
