--- a/EventApp/app/src/main/res/layout/customize_attendee_profile.xml
+++ b/EventApp/app/src/main/res/layout/customize_attendee_profile.xml
@@ -13,6 +13,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="48dp"
+        android:background="@drawable/edittext_frame"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintBaseline_toTopOf="parent"
@@ -24,6 +25,7 @@
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_marginTop="60dp"
+        android:background="@drawable/edittext_frame"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,6 +47,7 @@
         android:layout_width="329dp"
         android:layout_height="40dp"
         android:layout_marginTop="60dp"
+        android:background="@drawable/edittext_frame"
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
