--- a/EventApp/app/src/main/res/layout/fragment_organizer_customize_profile.xml
+++ b/EventApp/app/src/main/res/layout/fragment_organizer_customize_profile.xml
@@ -82,12 +82,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switch_enable_geolocation"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:text="Enable Geolocation"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/editTextTextMultiLine" />
+
     <Button
         android:id="@+id/buttonCustomizeImage"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="72dp"
         android:background="@drawable/rounded_button_background"
         android:text="@string/UploadImage"
         android:textColor="@color/white"
@@ -122,5 +134,5 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCustomizeImage"
-        app:layout_constraintVertical_bias="0.247" />
+        app:layout_constraintVertical_bias="0.137" />
 </androidx.constraintlayout.widget.ConstraintLayout>
